finished cryptid app

--- a/views/dinosaurs/index.ejs
+++ b/views/dinosaurs/index.ejs
@@ -2,6 +2,20 @@
     <% dinos.forEach(function(dino, id) { %>
         <li>
             <a href="/dinosaurs/<%= id %>"><%= dino.name %></a> is a <%= dino.type %>
+            <form method="POST" action="/dinosaurs/<%= id %>/?_method=DELETE">
+                <input type="submit" value="X">
+            </form>
         </li>
     <% }); %>
 </ul>
+
+<!-- <ul>
+        <% dinos.forEach(function(dino, id) { %>
+          <li>
+            <a href="/dinosaurs/<%= id %>"><%= dino.name %></a> is a <%= dino.type %>
+            <form method="POST" action="/dinosaurs/<%= id %>/?_method=DELETE">
+              <input type="submit" value="X">
+            </form>
+          </li>
+        <% }); %>
+      </ul> -->
