--- a/views/dinosaurs/show.ejs
+++ b/views/dinosaurs/show.ejs
@@ -1,1 +1,6 @@
-<%= dino.name %> is a <%= dino.type %>
+<h1><%= dino.name %></h1>
+<h4>is an example of a</h4> <%= dino.type %>
+<button><a href="/dinosaurs/edit/<%= dinoIndex %>">EDIT</a></button>
+
+<!-- <%= dino.name %> is a <%= dino.type %>.
+<button><a href="/dinosaurs/edit/<%= dinoIndex %>">Edit Dino</a></button> -->
