--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -9,11 +9,13 @@
 </head>
 <body>
     <header>
-        <h1>My Dinosaur and Cryptic App</h1>
+        <h1>My Dinosaur and Cryptic... I MEANT CRYPTID App</h1>
         <nav>
             <a href="/">HOME</a> | 
             <a href="/dinosaurs">ALL DINOS</a> |
-            <a href="/dinosaurs/new">Add a Dino here</a>
+            <a href="/dinosaurs/new">Add a Dino here</a> |
+            <a href="/cryptids">ALL CRYPTIDS</a> |
+            <a href="/cryptids/new">Add a cryptid here</a>
         </nav>
     </header>
     <main>
