--- a/views/dinosaurs/new.ejs
+++ b/views/dinosaurs/new.ejs
@@ -8,3 +8,14 @@
 
     <input type="submit" value="add dino here">
 </form>
+
+<!-- <h2>Add a New Dinosaur</h2>
+<form method="POST" action="/dinosaurs">
+  <label for="name">Name:</label>
+  <input type="text" id="name" name="name">
+
+  <label for="type">Type:</label>
+  <input type="text" id="type" name="type">
+
+  <input type="submit" value="Add Dino">
+</form> -->
